--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.nuun</groupId>
     <artifactId>kernel-listener</artifactId>
-    <version>1.0.M2</version>
+    <version>1.0.M3-SNAPSHOT</version>
 
     <name>Kernel listener</name>
 
